<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageFood"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_food_placeholder"
             />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/textFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name" />

            <TextView
                android:id="@+id/textFoodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_price" />

            <TextView
                android:id="@+id/textViewOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_price" />
        </LinearLayout>

        <TextView
            android:id="@+id/textFoodQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/food_quantity" />

    </LinearLayout>

</layout>